--- a/about.html
+++ b/about.html
@@ -7,22 +7,28 @@
     <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
-    <header>
+    <header class="fade-in">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="more.html">More</a></li>
             </ul>
         </nav>
     </header>
-    <section id="about">
+    <section id="about" class="fade-in" style="animation-delay: 0.4s;">
         <h2>About Me</h2>
         <div class="about-content">
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <img src="Source/your-image.jpg" alt="Louis" class="profile-pic">
+            <div class="bio">
+                <h3>Profile</h3>
+                <p><strong>Name:</strong> Louis</p>
+                <p><strong>Age:</strong> 16</p>
+                <p><strong>Occupation:</strong> Full Stack Developer, First Year Apprentice</p>
+                <h3>Biography</h3>
+                <p>Hello! I'm Louis, a motivated and dedicated Full Stack Developer in my first year of apprenticeship. From a young age, I discovered my passion for coding and have been pursuing my goal of developing innovative and efficient solutions ever since. In my free time, I enjoy experimenting with new technologies and continuously improving my skills in various programming languages and frameworks.</p>
+            </div>
         </div>
     </section>
 </body>
