--- a/contact.html
+++ b/contact.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
-    <header>
+    <header class="fade-in">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="more.html">More</a></li>
             </ul>
         </nav>
     </header>
-    <section id="contact">
+    <section id="contact" class="fade-in" style="animation-delay: 0.4s;">
         <h2>Contact</h2>
         <form>
             <label for="email">E-Mail</label>
