--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
     <section id="about" class="fade-in" style="animation-delay: 0.4s;">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="Source/your-image.jpg" alt="Louis" class="profile-pic">
-            <div class="bio">
+            <img src="Source/me.jpg" alt="Louis" class="profile-pic">
+            <div class="bio" style="animation-delay: 0.8s;">
                 <h3>Profile</h3>
                 <p><strong>Name:</strong> Louis</p>
                 <p><strong>Age:</strong> 16</p>
