--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,7 @@
             I am proficient in building robust and scalable applications using React for front-end and have a solid understanding 
             of database management with MySQL. My knowledge in C programming further strengthens my ability to handle system-level programming.
         </p>
-        <div class="skills-container">
+        <div class="skills-container" class="fade-in" style="animation-delay: 1s;">
             <div class="skill">
                 <img src="Source/Python.jpeg" alt="Python" class="skill-icon">
                 <span>Python</span>
